# mipt_se_autotest

./: .gitmodules  README.md  deploy.sh  repos.list  run.sh
scripts/: CMakeLists.txt  create_index.sh  do_report.sh  print_table.py
server/: do_report.sh  index.html  repos.list  rules.html  run.sh  style.css  table.csv
server/scripts/: create_index.sh  print_table.py
server/templates/: index.first
templates/: index.tplt
tests/: rational_test.cpp
